--- a/devertexwahn/okapi/rendering/intersector/BUILD.bazel
+++ b/devertexwahn/okapi/rendering/intersector/BUILD.bazel
@@ -3,12 +3,13 @@
     SPDX-License-Identifier: Apache-2.0
 """
 
-package(default_visibility = ["//visibility:public"])
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 
 cc_library(
     name = "embree_intersector",
     hdrs = ["embree_intersector.hpp"],
+    visibility = ["//visibility:public"],
     deps = [
         "//flatland/rendering/intersector",
         "//flatland/rendering/scene",
