--- a/devertexwahn/ci/macOS-13-apple-clang15.yaml
+++ b/devertexwahn/ci/macOS-13-apple-clang15.yaml
@@ -38,6 +38,7 @@ steps:
       clang --version
     displayName: "Show Clang version"
 
+  # BEGIN-EXCLUDE-FROM-FLATLAND
   - script: |
       brew install qt@6
       brew link qt@6
@@ -46,6 +47,8 @@ steps:
   - script: |
       /usr/local/opt/qt@6/share/qt/libexec/uic --version # rules_qt6 depend on the availability of uic on exactly this path
     displayName: "Show Qt uic version"
+  # END-EXCLUDE-FROM-FLATLAND
+
 
   - script: |
       cd devertexwahn
