--- a/devertexwahn/ci/macOS-15-apple-clang16.yaml
+++ b/devertexwahn/ci/macOS-15-apple-clang16.yaml
@@ -54,32 +54,32 @@ steps:
   # Exclude okapi.cli for now, since it depends on boringssl - there seems to be a workaround for that https://github.com/bazelbuild/bazel/issues/10472 but it leads to Qt6 dependency issues
   - script: |
       cd devertexwahn
-      bazel build --config=macos  -- //...    #
+      bazel build --config=macos --config=buildbuddy_remote_cache -- //...    #
     displayName: "Bazel build macos-fastbuild"
 
   - script: |
       cd devertexwahn
-      bazel test --config=macos  -- //...    #
+      bazel test --config=macos --config=buildbuddy_remote_cache -- //...    #
     displayName: "Bazel test macos-fastbuild"
 
   # dbg
   - script: |
       cd devertexwahn
-      bazel build --config=macos  --compilation_mode=dbg -- //...    #
+      bazel build --config=macos --config=buildbuddy_remote_cache --compilation_mode=dbg -- //...    #
     displayName: "Bazel build macos-dbg"
 
   - script: |
       cd devertexwahn
-      bazel test --config=macos  --compilation_mode=dbg -- //...    #
+      bazel test --config=macos --config=buildbuddy_remote_cache --compilation_mode=dbg -- //...    #
     displayName: "Bazel test macos-dbg"
 
   # opt
   - script: |
       cd devertexwahn
-      bazel build --config=macos  --compilation_mode=opt -- //...    #
+      bazel build --config=macos --config=buildbuddy_remote_cache --compilation_mode=opt -- //...    #
     displayName: "Bazel build macos-opt"
 
   - script: |
       cd devertexwahn
-      bazel test --config=macos  --compilation_mode=opt -- //...    #
+      bazel test --config=macos --config=buildbuddy_remote_cache --compilation_mode=opt -- //...    #
     displayName: "Bazel test macos-opt"
