--- a/devertexwahn/ci/ubuntu-22.04-clang19.yaml
+++ b/devertexwahn/ci/ubuntu-22.04-clang19.yaml
@@ -40,39 +40,39 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel run --config=clang19  --compilation_mode=dbg -- //tools/compiler_feature_dump
+      bazel run --config=clang19 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   # fastbuild
   - script: |
       cd devertexwahn
-      bazel build --config=clang19  -- //core/... //flatland/...
+      bazel build --config=clang19 --config=buildbuddy_remote_cache -- //core/... //flatland/...
     displayName: 'Bazel build clang19-fastbuild'
 
   - script: |
       cd devertexwahn
-      bazel test --config=clang19  -- //core/... //flatland/...
+      bazel test --config=clang19 --config=buildbuddy_remote_cache -- //core/... //flatland/...
     displayName: 'Bazel test clang19-fastbuild'
 
   # dbg
   - script: |
       cd devertexwahn
-      bazel build --config=clang19  --compilation_mode=dbg -- //core/... //flatland/...
+      bazel build --config=clang19 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //core/... //flatland/...
     displayName: 'Bazel build clang19-dbg'
 
   - script: |
       cd devertexwahn
-      bazel test --config=clang19  --compilation_mode=dbg -- //core/... //flatland/...
+      bazel test --config=clang19 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //core/... //flatland/...
     displayName: 'Bazel test clang19-dbg'
 
   - script: |
       cd devertexwahn
-      bazel build --config=clang19  --compilation_mode=opt -- //core/... //flatland/...
+      bazel build --config=clang19 --config=buildbuddy_remote_cache --compilation_mode=opt -- //core/... //flatland/...
     displayName: 'Bazel build clang19-opt'
 
   - script: |
       cd devertexwahn
-      bazel test --config=clang19  --compilation_mode=opt -- //core/... //flatland/...
+      bazel test --config=clang19 --config=buildbuddy_remote_cache --compilation_mode=opt -- //core/... //flatland/...
     displayName: 'Bazel test clang194-opt'
 
   - script: |
