--- a/devertexwahn/ci/ubuntu-22.04-gcc11-dbg-part2.yaml
+++ b/devertexwahn/ci/ubuntu-22.04-gcc11-dbg-part2.yaml
@@ -39,7 +39,7 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel run --config=gcc11  --compilation_mode=dbg -- //tools/compiler_feature_dump
+      bazel run --config=gcc11 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
@@ -48,7 +48,7 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel build --config=gcc11  --compilation_mode=dbg -- //okapi/...
+      bazel build --config=gcc11 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //okapi/...
     displayName: "Bazel build gcc11-dbg (part 2)"
 
   - script: |
@@ -57,7 +57,7 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel test --config=gcc11  --compilation_mode=dbg -- //okapi/...
+      bazel test --config=gcc11 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //okapi/...
     displayName: "Bazel test gcc11-dbg (part 2)"
 
   - script: |
