--- a/devertexwahn/ci/ubuntu-24.04-gcc13-dbg-part1.yaml
+++ b/devertexwahn/ci/ubuntu-24.04-gcc13-dbg-part1.yaml
@@ -39,7 +39,7 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel run --config=gcc13  --compilation_mode=dbg -- //tools/compiler_feature_dump
+      bazel run --config=gcc13 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
@@ -48,12 +48,12 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel build --config=gcc13  --compilation_mode=dbg -- //... -//okapi/...
+      bazel build --config=gcc13 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //... -//okapi/...
     displayName: "Bazel build gcc13-dbg (part 1)"
 
   - script: |
      cd devertexwahn
-     bazel test --config=gcc13  --compilation_mode=dbg -- //... -//okapi/...
+     bazel test --config=gcc13 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //... -//okapi/...
     displayName: "Bazel test gcc13-dbg (part 1)"
 
   - script: |
