--- a/devertexwahn/ci/windows-2019-vs2019-dbg.yaml
+++ b/devertexwahn/ci/windows-2019-vs2019-dbg.yaml
@@ -24,23 +24,23 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2019  --compilation_mode=dbg -- //tools/compiler_feature_dump
+      bazel --output_base=C:/bazel_output_base run --config=vs2019 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2019  --compilation_mode=dbg -- //tools/cpu_info:cpu_info
+      bazel --output_base=C:/bazel_output_base run --config=vs2019 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/cpu_info:cpu_info
     displayName: "Show CPU information"
 
   # dbg
   - script: |    
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base build --config=vs2019 --compilation_mode=dbg  -- //...
+      bazel --output_base=C:/bazel_output_base build --config=vs2019 --compilation_mode=dbg --config=buildbuddy_remote_cache -- //...
     displayName: "Bazel build vs2019-dbg"
 
   - script: |    
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base test --config=vs2019 --compilation_mode=dbg  -- //... 
+      bazel --output_base=C:/bazel_output_base test --config=vs2019 --compilation_mode=dbg --config=buildbuddy_remote_cache -- //... 
     displayName: "Bazel test vs2019-dbg"
 
   - pwsh: |
