--- a/devertexwahn/ci/windows-2019-vs2019-fastbuild.yaml
+++ b/devertexwahn/ci/windows-2019-vs2019-fastbuild.yaml
@@ -24,23 +24,23 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2019  -- //tools/compiler_feature_dump
+      bazel --output_base=C:/bazel_output_base run --config=vs2019 --config=buildbuddy_remote_cache -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2019  -- //tools/cpu_info:cpu_info
+      bazel --output_base=C:/bazel_output_base run --config=vs2019 --config=buildbuddy_remote_cache -- //tools/cpu_info:cpu_info
     displayName: "Show CPU information"
 
   # fastbuild
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base build --config=vs2019  -- //...
+      bazel --output_base=C:/bazel_output_base build --config=vs2019 --config=buildbuddy_remote_cache -- //...
     displayName: "Bazel build vs2019-fastbuild"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base test --config=vs2019  -- //... 
+      bazel --output_base=C:/bazel_output_base test --config=vs2019 --config=buildbuddy_remote_cache -- //... 
     displayName: "Bazel test vs2019-fastbuild"
 
   - pwsh: |
