--- a/devertexwahn/ci/windows-2022-vs2022-fastbuild.yaml
+++ b/devertexwahn/ci/windows-2022-vs2022-fastbuild.yaml
@@ -25,24 +25,24 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2022  -- //tools/compiler_feature_dump
+      bazel --output_base=C:/bazel_output_base run --config=vs2022 --config=buildbuddy_remote_cache -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2022  -- //tools/cpu_info:cpu_info
+      bazel --output_base=C:/bazel_output_base run --config=vs2022 --config=buildbuddy_remote_cache -- //tools/cpu_info:cpu_info
     displayName: "Show CPU information"
 
 
   # fastbuild
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base build --config=vs2022  -- //...
+      bazel --output_base=C:/bazel_output_base build --config=vs2022 --config=buildbuddy_remote_cache -- //...
     displayName: "Bazel build vs2022-fastbuild"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base test --config=vs2022  -- //... 
+      bazel --output_base=C:/bazel_output_base test --config=vs2022 --config=buildbuddy_remote_cache -- //... 
     displayName: "Bazel test vs2022-fastbuild"
 
   - pwsh: |
