--- a/devertexwahn/ci/windows-2025-vs2022-dbg.yaml
+++ b/devertexwahn/ci/windows-2025-vs2022-dbg.yaml
@@ -25,23 +25,23 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2022  --compilation_mode=dbg -- //tools/compiler_feature_dump
+      bazel --output_base=C:/bazel_output_base run --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2022  --compilation_mode=dbg -- //tools/cpu_info:cpu_info
+      bazel --output_base=C:/bazel_output_base run --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/cpu_info:cpu_info
     displayName: "Show CPU information"
 
   # dbg
   - script: |    
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base build --config=vs2022  --compilation_mode=dbg -- //...
+      bazel --output_base=C:/bazel_output_base build --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //...
     displayName: "Bazel build vs2022-dbg"
 
   - script: |    
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base test --config=vs2022  --compilation_mode=dbg -- //... 
+      bazel --output_base=C:/bazel_output_base test --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //... 
     displayName: "Bazel test vs2022-dbg"
 
   - pwsh: |
