--- a/devertexwahn/ci/windows-2025-vs2022-opt.yaml
+++ b/devertexwahn/ci/windows-2025-vs2022-opt.yaml
@@ -25,12 +25,12 @@ steps:
     
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2022  --compilation_mode=opt -- //tools/compiler_feature_dump
+      bazel --output_base=C:/bazel_output_base run --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=opt -- //tools/compiler_feature_dump
     displayName: "Compiler feature dump"
 
   - script: |
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base run --config=vs2022  --compilation_mode=opt -- //tools/cpu_info:cpu_info
+      bazel --output_base=C:/bazel_output_base run --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=opt -- //tools/cpu_info:cpu_info
     displayName: "Show CPU information"
 
   - pwsh: |
@@ -40,7 +40,7 @@ steps:
   # opt
   - script: |    
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base build --config=vs2022  --compilation_mode=opt -- //...
+      bazel --output_base=C:/bazel_output_base build --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=opt -- //...
     displayName: "Bazel build vs2022-opt"
   
   - pwsh: |
@@ -49,7 +49,7 @@ steps:
 
   - script: |    
       cd devertexwahn
-      bazel --output_base=C:/bazel_output_base test --config=vs2022  --compilation_mode=opt -- //... 
+      bazel --output_base=C:/bazel_output_base test --config=vs2022 --config=buildbuddy_remote_cache --compilation_mode=opt -- //... 
     displayName: "Bazel test vs2022-opt"
 
   - pwsh: |
