--- a/devertexwahn/MODULE.bazel
+++ b/devertexwahn/MODULE.bazel
@@ -248,3 +248,11 @@ include("//bazel/module/python:Python.MODULE.bazel")
 # BEGIN-INTERNAL
 
 include("//bazel/module/oci:Oci.MODULE.bazel")
+
+#-------------------------------------------------------------------------------------
+# Doxygen
+
+doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
+use_repo(doxygen_extension, "doxygen")
+
+#-------------------------------------------------------------------------------------
