--- a/devertexwahn/ci/ubuntu-22.04-gcc11-dbg-part1.yaml
+++ b/devertexwahn/ci/ubuntu-22.04-gcc11-dbg-part1.yaml
@@ -39,7 +39,9 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel run --config=gcc11 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //tools/compiler_feature_dump
+      bazel run --config=gcc11 --config=buildbuddy_remote_cache --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY} --compilation_mode=dbg -- //tools/compiler_feature_dump
+    env:
+      BUILDBUDDY_API_KEY: $(BUILDBUDDY_API_KEY)
     displayName: "Compiler feature dump"
 
   - script: |
@@ -48,12 +50,16 @@ steps:
 
   - script: |
       cd devertexwahn
-      bazel build --config=gcc11 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //... -//okapi/...
+      bazel build --config=gcc11 --config=buildbuddy_remote_cache --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY} --compilation_mode=dbg -- //... -//okapi/...
+    env:
+      BUILDBUDDY_API_KEY: $(BUILDBUDDY_API_KEY)
     displayName: "Bazel build gcc11-dbg (part 1)"
 
   - script: |
-     cd devertexwahn
-     bazel test --config=gcc11 --config=buildbuddy_remote_cache --compilation_mode=dbg -- //... -//okapi/...
+      cd devertexwahn
+      bazel test --config=gcc11 --config=buildbuddy_remote_cache --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY} --compilation_mode=dbg -- //... -//okapi/...
+    env:
+      BUILDBUDDY_API_KEY: $(BUILDBUDDY_API_KEY)
     displayName: "Bazel test gcc11-dbg (part 1)"
 
   - script: |
